fix font sizing and layout issues for mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 #myNavbar {
     background-color: #D9E8EE;
     height: 20vw;
-    width: 99vw;
+    width: 100vw;
     color: #845EC2;
 }
 
@@ -82,7 +82,7 @@ body {
 
 #myCarousel {
     height: 50vw;
-    max-width: 99vw;
+    max-width: 100vw;
     overflow: hidden;
 }
 
@@ -110,7 +110,7 @@ body {
     top: 4vw;
     left: 1vw;
     width: 28vw;
-    margin: 1.5vw;
+    margin: 1vw;
     border-radius: 1vw;
 }
 
@@ -129,7 +129,7 @@ body {
 }
 
 #workshop {
-    width: 99%;
+    width: 100vw;
 }
 
 #cover-text {
@@ -153,7 +153,7 @@ body {
     position: relative;
     bottom: 10vw;
     height: 25vw;
-    width: 99vw;
+    width: 100vw;
     background-color: rgba(107, 107, 184, 0.662);
 }
 
@@ -229,7 +229,7 @@ footer {
 /* about */
 
 #campervan-selection {
-    width: 99vw;
+    width: 100vw;
     margin-top: 5vw;
 }
 
@@ -249,7 +249,7 @@ footer {
 }
 
 #campervan-factory-full {
-    width: 99vw;
+    width: 100vw;
     position: relative;
     bottom: 5vw;
 }
@@ -403,26 +403,27 @@ footer {
 
 /* conversions page */
 
-.inside-conversion {
-    position: relative;
-    top: 4vw;
-    left: 1vw;
-    width: 28vw;
-    margin: 1.5vw;
-    border-radius: 1vw;
-}
-
 #picard-header {
     color: #b3d0d9;
     position: relative;
-    left: 60vw;
+    left: 48vw;
     text-align: center;
     margin-top: 5vw;
-    font-size: 3vw;
-    width: 37vw;
-    height: 4vw;
+    bottom:4vw;
+    font-size: 4.5vw;
+    width: 45vw;
+    height: 5.5vw;
     background-color: rgba(107, 107, 184, 0.662);
     padding: 0.5%;
+    border-radius: 1vw;
+}
+
+.inside-conversion {
+    position: relative;
+    left: 1vw;
+    bottom:3vw;
+    width: 28vw;
+    margin: 1vw;
     border-radius: 1vw;
 }
 
@@ -430,22 +431,22 @@ footer {
     font-family: 'Nanum Gothic', sans-serif;
     color: #b3d0d9;
     margin-top: 5vw;
-    font-size: 1.5vw;
-    width: 43vw;
-    height: 18vw;
+    font-size: 2vw;
+    width: 50vw;
+    height: 27vw;
     background-color: rgba(107, 107, 184, 0.662);
     padding: 0.5%;
     position: relative;
-    bottom: 78vw;
-    left: 50vw;
+    bottom: 82vw;
+    left: 47vw;
     border-radius: 1vw;
 }
 
 #demo-video {
-    width: 43vw;
+    width: 41vw;
     position: relative;
     left: 50vw;
-    bottom: 25vw;
+    bottom: 24vw;
 }
 
 .section31 {
@@ -456,14 +457,14 @@ footer {
     font-family: 'Nanum Gothic', sans-serif;
     color: #b3d0d9;
     margin-top: 5vw;
-    font-size: 1.5vw;
-    width: 80vw;
-    height: 12vw;
+    font-size: 2vw;
+    width: 96vw;
+    height: 15vw;
     background-color: rgba(107, 107, 184, 0.662);
     padding: 0.5%;
     position: relative;
-    bottom: 48vw;
-    left: 10vw;
+    bottom: 58vw;
+    left: 2vw;
     border-radius: 1vw;
 }
 
@@ -487,7 +488,7 @@ footer {
 /*contact page*/
 
 #white-camper {
-    width: 99vw;
+    width: 100vw;
     position: relative;
     top: 3vw;
 }
@@ -633,7 +634,7 @@ footer {
 /* gallery page */
 
 #silver-campervan {
-    width: 99vw;
+    width: 100vw;
     position: relative;
     top: 3vw;
 }
@@ -780,7 +781,7 @@ footer {
 }
 
 #image-404{
-    width: 99vw;
+    width: 100vw;
 }
 
 .return-home{
